--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     implementation "com.android.support:cardview-v7:$googleLibraries"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-
     //rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
@@ -45,6 +44,7 @@ dependencies {
     //dagger
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    implementation 'com.android.support:support-v4:27.0.2'
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
